<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KeepWalking</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bounce_scroll_view">BounceScrollViewActivity</string>


    <string name="phone_login">手机登录</string>
    <string name="phone_reg">注册帐号</string>
    <string name="title_activity_pull_to_refresh_list_view">PullToRefreshListViewActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="select_mode">选择模式</string>
    <string name="mode_single">单选</string>
    <string name="mode_multi">多选</string>
    <string name="max_select_amount">最大选择数量</string>
    <string name="hint_default_amount">默认数量为9</string>
    <string name="enable_camera">是否启用照相机</string>
    <string name="enable">是</string>
    <string name="disable">否</string>
    <string name="go_select">图片选择</string>

    <!-- Strings for WeiXinMainActivity -->
    <string name="weixin">微信</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_message">信息</string>
    <string name="bar_conversation">微信</string>
    <string name="bar_friend_list">通讯录</string>
    <string name="bar_search">发现</string>
    <string name="bar_me">我</string>

    <string name="share_sdk">Share SDK</string>
    <string name="login_with_wechat">用微信登录</string>
    <string name="login_with_qzone">用QQ空间登录</string>
    <string name="login_with_other_plat">其他帐号登录</string>
    <string name="share_other">分享到</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_wechat_moments">微信朋友圈</string>
    <string name="share_tencent">腾讯好友</string>
    <string name="share_tencent_weibo">腾讯微博</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_sina_weibo">新浪微博</string>
    <string name="share_completed">分享成功！</string>
    <string name="share_canceled">分享取消！</string>
    <string name="share_failed">分享失败！</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>
    <string name="ok">确定</string>
    <string name="pay_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>
