<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10.0dip" >

    <TextView
        style="@style/custom_gray_big_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_other" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/btn_share_wechat"
            style="@style/custom_gray_middle_text"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/btn_share_wechat"
            android:gravity="center"
            android:text="@string/share_wechat" />

        <TextView
            android:id="@id/btn_share_wechat_moments"
            style="@style/custom_gray_middle_text"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/btn_share_wechat_moments"
            android:gravity="center"
            android:text="@string/share_wechat_moments" />

        <TextView
            android:id="@id/btn_share_tencent"
            style="@style/custom_gray_middle_text"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/btn_share_tencent"
            android:gravity="center"
            android:text="@string/share_tencent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/btn_share_tencent_weibo"
            style="@style/custom_gray_middle_text"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/btn_share_tencent_weibo"
            android:gravity="center"
            android:text="@string/share_tencent_weibo" />

        <TextView
            android:id="@id/btn_share_qzone"
            style="@style/custom_gray_middle_text"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/btn_share_qzone"
            android:gravity="center"
            android:text="@string/share_qzone" />

        <TextView
            android:id="@id/btn_share_sina_weibo"
            style="@style/custom_gray_middle_text"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/btn_share_sina_weibo"
            android:gravity="center"
            android:text="@string/share_sina_weibo" />
    </LinearLayout>

    <ImageView
        android:id="@id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:src="@drawable/btn_share_close" />

</LinearLayout>